# skyline

./: .editorconfig  Makefile  README.md  legacy.sfdisk
meson/: x86_64-clang-limine.ini  x86_64-clang-uefi.ini
microkernel/: kmain.cc  meson.build
microkernel/arch/: public.hh
microkernel/arch/x86_64/: cpu.cc  interrupts.S  interrupts.cc  interrupts.hh  register_dumps.S  register_dumps.hh  stackframe.cc
microkernel/debug/: log.hh  panic.cc  panic.hh
microkernel/entry/public/: logging.hh  panic.hh
microkernel/entry/uefi/: logging.cc  main.cc  panic.cc
modules/legacyboot/: Makefile
modules/legacyboot/include/: pointers.s
modules/legacyboot/stage1/: globals.s  main.s  screen.s  strings.s
modules/legacyboot/stage2/: 64bit.s  a20.s  gdt.s  long.s  main.s  page.s  pointers.s  sse.s  strings.s  tss.s
modules/legacyboot/stage2/modes/: extended.s  long.s  protected.s  real.s
modules/legacyboot/stage3/: Makefile  ahci.c  log.c  page.c  pci.c  screen.c  serial.c  stage3.ld  stage3_main.c
modules/legacyboot/stage3/asm/: instructions.s  start.s
modules/legacyboot/stage3/include/: ahci.h  devices.h  instructions.h  log.h  memory.h  page.h  pci.h  screen.h  serial.h  std.h  (+1 more)
shared/: efi.hh
shared/arch/common/: stackframe.hh
shared/arch/x86_64/: common.hh  dump_regs.hh  idt.hh  stackframe.cc  stackframe.hh  wrappers.hh
shared/common/: numeric.hh  string.cc  string.hh
shared/efi/: boot_services.hh  global.cc  global.hh  guids.hh  memory.cc  memory.hh  primitives.hh  runtime_services.hh  tables.hh
shared/efi/protocol/: simple_text_input_protocol.hh  simple_text_output_protocol.hh
(+4 files in other folders)
